--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -818,6 +818,7 @@ form .field {
   position: relative;
 }
 form .field .clear {
+  z-index: 10;
   position: absolute;
   right: 0;
   top: 0;
